# moments

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  docker-compose.yaml  index.html  nginx.conf  package.json  style.css  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
frontend/: index.html  kiosk.css  kiosk.html  kiosk.js  upload.css  upload.html  upload.js
src/: cache.rs  images.rs  immichService.ts  index.rs  kioskEngine.ts  main.rs  main.ts  types.ts  upload.rs  websocket.rs
