[package]
name = "moments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["multipart", "ws"] }
axum_typed_multipart = "0.9.0"
clap = { version = "4.3.24", features = ["derive"] }
env_logger = "0.10.0"
highway = "1.1.0"
image = "0.24.7"
kamadak-exif = "0.5.5"
log = "0.4.20"
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = { version = "0.4.1", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.8.0"
thiserror = "1.0.47"
time = {version = "0.3.28", features = ["formatting"]}
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs"] }
walkdir = "2.3.3"
