[package]
name = "moments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.9", features = ["multipart", "ws"] }
axum_typed_multipart = "0.13.2"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
highway = "1.2.0"
image = "0.25.5"
kamadak-exif = "0.6.1"
log = "0.4.22"
notify = { version = "7.0.0", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = { version = "0.5.0", default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tempfile = "3.14.0"
thiserror = "2.0.3"
time = {version = "0.3.36", features = ["formatting"]}
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs", "set-header"] }
walkdir = "2.5.0"
